--- a/examples/astro/src/pages/index.astro
+++ b/examples/astro/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from '../components/Card.astro';
 
 <Layout title="Astro + Master CSS v2">
 	<main>
-		<h1><span class="text-gradient">Astro</span> + <span class="fg:gold-30">Master CSS v2 JIT</span></h1>
+		<h1><span class="text-gradient">Astro</span> + <span class="fg:yellow-70">Master CSS</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
