--- a/examples/next.js/app/globals.css
+++ b/examples/next.js/app/globals.css
@@ -1,5 +1,3 @@
-@import 'master.css';
-
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
@@ -78,7 +76,7 @@ body {
 }
 
 body {
-    color: rbg(--foreground-rgb);
+    color: rgb(var(--foreground-rgb));
     background: linear-gradient(to bottom,
             transparent,
             rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
