Update(CSS): Merged `options.override` `options.observe` into `config`

--- a/examples/astro/src/layouts/Layout.astro
+++ b/examples/astro/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
         <!-- <script>
             import MasterCSS from "@master/css";
             import config from "../../master.css";
-            export const css = new MasterCSS({ config });
+            export const css = new MasterCSS(config);
         </script> -->
     </head>
     <body>
