--- a/examples/astro/src/layouts/Layout.astro
+++ b/examples/astro/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
         <!-- JIT -->
         <!-- <script>
             import MasterCSS from "@master/css";
-            import config from "../../master.css";
+            import { config } from "../../master.css";
             export const css = new MasterCSS(config);
         </script> -->
     </head>
