--- a/examples/react/src/App.css
+++ b/examples/react/src/App.css
@@ -35,7 +35,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
+    .logo.react {
         animation: logo-spin infinite 20s linear;
     }
 }
