Update Astro examples

--- a/examples/astro-with-runtime-rendering/src/pages/index.astro
+++ b/examples/astro-with-runtime-rendering/src/pages/index.astro
@@ -3,9 +3,11 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Astro + Master CSS v2">
+<Layout title="Welcome to Astro.">
 	<main>
-		<h1><span class="text-gradient">Astro</span> + <span class="fg:yellow-70">Master CSS</span></h1>
+		<h1 class="text:center my:50 text-gradient">
+            Astro + Master CSS
+        </h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
