--- a/examples/angular-with-static-extraction/src/styles.css
+++ b/examples/angular-with-static-extraction/src/styles.css
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'virtual:master.css'
+@import '.virtual:master.css'
