Improve(Extractor): Default `.virtual/master.css` virtual module and file output

--- a/examples/astro-with-static-extraction/src/layouts/Layout.astro
+++ b/examples/astro-with-static-extraction/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ export interface Props {
     title: string;
 }
 
-import ".virtual:master.css";
+import ".virtual/master.css";
 
 const { title } = Astro.props;
 ---
