--- a/examples/astro-with-runtime-rendering/src/pages/index.astro
+++ b/examples/astro-with-runtime-rendering/src/pages/index.astro
@@ -5,10 +5,10 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1 class="text:center my:50 text-gradient">
-            Astro + Master CSS
+		<h1 class="text:center my:50 ls:-.015em">
+            <span class="text-gradient mr:10">Astro</span> Master CSS
         </h1>
-		<p class="instructions">
+		<p class="instructions p:25!">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
