Docs: Improve **Global Styles** documentation

--- a/packages/normal.css/src/eliminate-click-delays.css
+++ b/packages/normal.css/src/eliminate-click-delays.css
@@ -1,9 +1,3 @@
-/*
- * Disable double-click to zoom on links,
- * input fields and buttons to improve responsiveness for touch devices
- */
-
-a,
-button {
+a, button {
     touch-action: manipulation;
 }
