--- a/packages/normal.css/src/index.css
+++ b/packages/normal.css/src/index.css
@@ -1,78 +1,18 @@
+@import './intuitive-sizing-control.css';
 @import './eliminate-click-delays.css';
+@import './remove-default-borders.css';
+@import './remove-default-spacing.css';
+@import './better-text-appearance.css';
+@import './responsive-media-elements.css';
 
 body {
-    line-height: 1.2;
     -webkit-tap-highlight-color: transparent;
-    text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
     -moz-tab-size: 4;
     tab-size: 4;
 }
 
-b,
-strong {
+b, strong {
     font-weight: bolder;
-}
-
-*,
-::before,
-::after {
-    box-sizing: border-box;
-    border: 0 solid;
-}
-
-* {
-    text-rendering: geometricPrecision;
-}
-
-body,
-blockquote,
-dl,
-dd,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-figure,
-p,
-button,
-optgroup,
-select,
-textarea,
-pre {
-    margin: 0;
-}
-
-td,
-legend,
-textarea,
-input,
-fieldset {
-    padding: 0;
-}
-
-img,
-svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
-    display: block;
-}
-
-ul,
-ol {
-    margin: 0;
-    padding: 0;
 }
 
 ul {
@@ -101,9 +41,7 @@ textarea {
     background-color: transparent;
 }
 
-
-sub,
-sup {
+sub, sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
