Improve(Normal CSS): Support modular import on demand

--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -1,6 +1,7 @@
+/* @import '@master/normal.css'; */
 @import '@master/normal.css';
-@import '~/public/fonts/inter.css';
-@import '~/public/fonts/fira-code.css';
+@import '~/public/fonts/inter';
+@import '~/public/fonts/fira-code';
 
 .demo,
 .grids-bg {
