--- a/packages/normal.css/src/index.css
+++ b/packages/normal.css/src/index.css
@@ -1,116 +1,23 @@
-@import './intuitive-sizing-control.css';
-@import './eliminate-click-delays.css';
-@import './remove-default-borders.css';
-@import './remove-default-spacing.css';
-@import './remove-tap-highlight.css';
-@import './better-text-appearance.css';
-@import './responsive-media-elements.css';
+@import '../better-text-appearance';
+@import '../eliminate-click-delays';
+@import '../improve-user-recognition';
+@import '../intuitive-sizing-control';
+@import '../readable-tab-size';
+@import '../responsive-media-elements';
 
-body {
-    -moz-tab-size: 4;
-    tab-size: 4;
-}
+/* consistent */
+@import '../consistent-abbreviation-styles';
+@import '../consistent-bold-styles';
+@import '../consistent-control-styles';
+@import '../consistent-horizontal-lines';
+@import '../consistent-small-styles';
+@import '../consistent-superscript-subscript';
+@import '../consistent-table-styles';
 
-b, strong {
-    font-weight: bolder;
-}
-
-ul {
-    list-style: none;
-}
-
-hr {
-    height: 0;
-    color: inherit;
-}
-
-small {
-    font-size: 80%;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: inherit;
-    font-size: 100%;
-    margin: 0;
-    padding: 0;
-    color: inherit;
-    background-color: transparent;
-}
-
-sub, sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-sub {
-    bottom: -0.25em;
-}
-
-sup {
-    top: -0.5em;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-abbr[title] {
-    text-decoration: underline dotted;
-}
-
-table {
-    text-indent: 0;
-    border-color: inherit;
-}
-
-button,
-select {
-    text-transform: none;
-}
-
-a,
-[type=button]:not([disabled]),
-[role=button],
-button:not([disabled]) {
-    cursor: pointer;
-}
-
-::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-:-moz-ui-invalid {
-    box-shadow: none;
-}
-
-progress {
-    vertical-align: baseline;
-}
-
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-    height: auto;
-}
-
-::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    /* 1 */
-    font: inherit;
-    /* 2 */
-}
-
-summary {
-    display: list-item;
-}
+/* remove */
+@import '../remove-anchor-styles';
+@import '../remove-control-styles';
+@import '../remove-default-borders';
+@import '../remove-default-spacing';
+@import '../remove-tap-highlight';
+@import '../remove-list-styles';
