Update metadata in layout.tsx and examples/layout.tsx

--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -7,7 +7,7 @@
             <img class="mx:auto mb:40 hide block@dark" src="/images/sandbox-logotype@dark.svg"
                  alt="Master CSS Play"
                  width="200" />
-            <p class="fg:neutural">An online code editor using Master CSS Runtime Rendering, including:</p>
+            <p class="fg:neutural">A real-time code editor for Master CSS, including:</p>
             <ul>
                 <li class="flex fg:major font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
