Update styles and variables in config.js and example.html

--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -1,6 +1,6 @@
 <div class="min-vh p:30 flex center-content">
     <div
-         class="max-w:520 shadow:x3 outline:1|solid|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
+         class="max-w:520 shadow:3x outline:1|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
         <div class="p:50|50|25|50">
             <img class="mx:auto mb:40 hide block@light" src="/images/sandbox-logotype@light.svg"
                  alt="Master CSS Play" width="200" />
@@ -56,7 +56,7 @@
             </ul>
             <p class="fg:neutural">Here you can quickly create demos, ideas, prototypes, and even for learning.</p>
         </div>
-        <div class="p:25|50|50|50 bt:1|dotted|divider">
+        <div class="p:25|50|50|50 bt:1|dotted|frame">
             <p class="text:12 italic mt:0 fg:neutural">Don't know how to use Master CSS syntax yet?</p>
             <a class="btn w:full mt:20 rel" href="https://beta.css.master.co/docs/syntax" target="_blank"
                rel="noreferrer noopener">
