--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -9,7 +9,7 @@
                  width="200" />
             <p class="fg:neutural">A real-time code editor for Master CSS, including:</p>
             <ul>
-                <li class="flex fg:major font:medium">
+                <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
@@ -20,7 +20,7 @@
                     </svg>
                     Rendering with your custom configuration.
                 </li>
-                <li class="flex fg:major font:medium">
+                <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
@@ -31,7 +31,7 @@
                     </svg>
                     Previewing results without reloading.
                 </li>
-                <li class="flex fg:major font:medium">
+                <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
@@ -42,7 +42,7 @@
                     </svg>
                     Resizing devices for responsive design.
                 </li>
-                <li class="flex fg:major font:medium">
+                <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
