--- a/examples/astro-with-static-extraction/src/pages/index.astro
+++ b/examples/astro-with-static-extraction/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1 class="text:center my:50 ls:-.015em">
+		<h1 class="text:center my:12x ls:-.015em">
             <span class="text-gradient mr:10">Astro</span> Master CSS
         </h1>
 		<p class="instructions p:25!">
