Update color variables and styles

--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -1,6 +1,6 @@
 <div class="min-vh p:30 flex center-content">
     <div
-         class="max-w:520 shadow:3x outline:1|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
+         class="max-w:520 shadow:01 outline:1|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
         <div class="p:50|50|25|50">
             <img class="mx:auto mb:40 hide block@light" src="/images/sandbox-logotype@light.svg"
                  alt="Master CSS Play" width="200" />
