Update CSS classes with new values

--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -1,7 +1,7 @@
 <div class="min-vh p:30 flex center-content">
     <div
          class="max-w:520 shadow:01 outline:1|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
-        <div class="p:50|50|25|50">
+        <div class="p:12x|50|25|50">
             <img class="mx:auto mb:40 hide block@light" src="/images/sandbox-logotype@light.svg"
                  alt="Master CSS Play" width="200" />
             <img class="mx:auto mb:40 hide block@dark" src="/images/sandbox-logotype@dark.svg"
