--- a/packages/server/tests/add-colors-by-theme/generated.css
+++ b/packages/server/tests/add-colors-by-theme/generated.css
@@ -1,1 +1,1 @@
-.light{--primary:255 255 255}.dark{--primary:0 0 0}.bg\:primary{background-color:rgb(var(--primary))}
+:root{--primary:255 0 0}.light{--primary:255 255 255}.dark{--primary:0 0 0}.bg\:primary{background-color:rgb(var(--primary))}
