Update version and font links

--- a/website/app/[locale]/play/templates/latest/example.html
+++ b/website/app/[locale]/play/templates/latest/example.html
@@ -1,17 +1,17 @@
-<div class="min-vh p:30 flex center-content">
+<div class="min-vh p:6x flex center-content">
     <div
-         class="max-w:520 shadow:01 outline:1|ring bg:panel m:auto r:10 fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
-        <div class="p:12x|50|25|50">
-            <img class="mx:auto mb:40 hide block@light" src="/images/sandbox-logotype@light.svg"
+         class="max-w:520 shadow:01 outline:1|ring bg:panel m:auto r:3x fg:neutral text:16_:where(p,li) mt:1.5em_:where(p,ul) my:.75em_:where(li)">
+        <div class="p:12x|12x|6x|12x">
+            <img class="mx:auto mb:10x hide block@light" src="/images/sandbox-logotype@light.svg"
                  alt="Master CSS Play" width="200" />
-            <img class="mx:auto mb:40 hide block@dark" src="/images/sandbox-logotype@dark.svg"
+            <img class="mx:auto mb:10x hide block@dark" src="/images/sandbox-logotype@dark.svg"
                  alt="Master CSS Play"
                  width="200" />
             <p class="fg:neutural">A real-time code editor for Master CSS, including:</p>
             <ul>
                 <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
-                         class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
+                         class="mr:3x flex:0|0|auto stroke:accent fill:accent/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -22,7 +22,7 @@
                 </li>
                 <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
-                         class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
+                         class="mr:3x flex:0|0|auto stroke:accent fill:accent/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -33,7 +33,7 @@
                 </li>
                 <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
-                         class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
+                         class="mr:3x flex:0|0|auto stroke:accent fill:accent/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -44,7 +44,7 @@
                 </li>
                 <li class="flex fg:strong font:medium">
                     <svg xmlns="http://www.w3.org/2000/svg"
-                         class="mr:10 flex:0|0|auto stroke:primary fill:primary/.2" width="26" height="26"
+                         class="mr:3x flex:0|0|auto stroke:accent fill:accent/.2" width="26" height="26"
                          viewBox="0 0 24 24" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -56,16 +56,16 @@
             </ul>
             <p class="fg:neutural">Here you can quickly create demos, ideas, prototypes, and even for learning.</p>
         </div>
-        <div class="p:25|50|50|50 bt:1|dotted|frame">
-            <p class="text:12 italic mt:0 fg:neutural">Don't know how to use Master CSS syntax yet?</p>
-            <a class="btn w:full mt:20 rel" href="https://rc.css.master.co/docs/syntax" target="_blank"
+        <div class="p:6x|12x|12x|12x bt:1|dotted|divider">
+            <p class="text:12 italic mt:0">Don't know how to use Master CSS syntax yet?</p>
+            <a class="btn w:full mt:5x rel" href="https://rc.css.master.co/docs/style-declarations" target="_blank"
                rel="noreferrer noopener">
                 Learn syntax
-                <svg class="abs right:15" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                <svg class="abs right:4x" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                      stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path
-                          class="~ease|.1s opacity:0 scale(0) .btn:hover_{opacity:1;scale(1)} transform-origin:20|center"
+                          class="~ease|.1s opacity:0 scale(0) .btn:hover_{opacity:1;scale(1)} transform-origin:5x|center"
                           d="M5 12l14 0"></path>
                     <path d="M13 18l6 -6"></path>
                     <path d="M13 6l6 6"></path>
